tests/ui/asm/bad-arch.thirunsafeck.stderr
error[E0472]: inline assembly is unsupported on this target
  --> $DIR/bad-arch.rs:22:9
   |
LL |         asm!("");
   |         ^^^^^^^^

error[E0472]: inline assembly is unsupported on this target
  --> $DIR/bad-arch.rs:27:1
   |
LL | / macro_rules! global_asm {
LL | |     () => {};
LL | | }
   | |_- in this expansion of `global_asm!`
...
LL |   global_asm!("");
   |   ^^^^^^^^^^^^^^^ in this macro invocation

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0472`.
